// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontsSelect correct render should correct render with window for font selection 1`] = `
<DocumentFragment>
  <div
    id="font"
  >
    <button
      id="current-font"
    >
      <p>
        Sans Serif
      </p>
      <div
        height="6"
        width="12"
      />
    </button>
    <ul
      id="select-font"
    >
      <li>
        <button
          class="inter"
        >
          Sans Serif
        </button>
      </li>
      <li>
        <button
          class="lora"
        >
          Serif
        </button>
      </li>
      <li>
        <button
          class="inconsolata"
        >
          Mono
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`FontsSelect correct render should correct render without window for font selection 1`] = `
<DocumentFragment>
  <div
    id="font"
  >
    <button
      id="current-font"
    >
      <p>
        Sans Serif
      </p>
      <div
        height="6"
        width="12"
      />
    </button>
  </div>
</DocumentFragment>
`;
